# manager

./: .ci-allowlist.txt  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: dashboard.md  getting-started.md  guide.md  per_machine_setup.md
skills/manager-getting-started/: SKILL.md
src/: analyzer.rs  dashboard_ui.html  main.rs
