[package]
name = "manager-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.32"
regex = "1"
serde_yaml = "0.9"
once_cell = "1.18"
